--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --base /app/",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix --ignore-path .gitignore"
@@ -25,6 +25,8 @@
     "vue-json-excel3": "^1.0.19",
     "vue-router": "^4.0.0",
     "vue-toast-notification": "^3.1.2",
+    "vue-tree-view": "^0.0.12",
+    "vue3-treeview": "^0.4.1",
     "vuetify": "^3.0.0"
   },
   "devDependencies": {
